# reader-luminaries

./: README.md  pyproject.toml
reader_luminaries/: __init__.py
reader_luminaries/etc/: cached-carrel.txt  cached-cites.txt  cached-length.txt  cached-persona.txt  cached-query.txt  cached-question.txt  cached-results.txt  catalog.csv  lengths.txt  personas.txt  system-prompt.txt
reader_luminaries/static/carrels/bacon/: index.json
reader_luminaries/static/carrels/bacon/cache/: chapter_001-truth.txt  chapter_002-death.txt  chapter_003-unity_in_religion.txt  chapter_004-revenge.txt  chapter_005-adversity.txt  chapter_006-simulation_and_dissimulation.txt  chapter_007-parents_and_children.txt  chapter_008-marriage_and_single_life.txt  chapter_009-envy.txt  chapter_010-love.txt  chapter_011-great_place.txt  chapter_012-boldness.txt  chapter_013-goodness_goodness_nature.txt  chapter_014-nobility.txt  chapter_015-seditions_and_troubles.txt  chapter_016-atheism.txt  chapter_017-superstition.txt  chapter_018-travel.txt  chapter_019-empire.txt  chapter_020-counsel.txt  chapter_021-delays.txt  chapter_022-cunning.txt  chapter_023-wisdom_for_a_mans_self.txt  (+36 more)
reader_luminaries/static/carrels/horace/: index.json
reader_luminaries/static/carrels/machiavelli/: index.json  sentences.db
reader_luminaries/templates/: base.htm  carrel-form.htm  carrel.htm  cites.htm  elaborate-form.htm  elaborate.htm  format-error.htm  format.htm  home.htm  length-form.htm  length.htm  next.htm  persona-form.htm  persona.htm  question.htm  search-form.htm  search.htm  summarize.htm
(+188 files in other folders)
